# templates

preact/: eslint.config.mjs  index.html  package.json  tsconfig.json
preact/src/css/: styles.css
python/: .gitignore  pyproject.toml
python/.github/workflows/: checks.yml
react/: index.html  package.json  tsconfig.json
react-native/: eslint.config.mjs  package.json  tsconfig.json
react/src/: App.tsx
react/src/__tests__/: App.test.tsx
web/: .gitignore  package.json  tsconfig.json
web/src/css/: reset.css
