
[project]
name = "project-name"
authors = [
    {name = "Maliek"},
]
version = "0.1"
dependencies = []
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "pre-commit",
]

# Integrated Ruff configuration for linting and formatting
[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "W",   # pycodestyle
    "F",   # pyflakes
    "D",   # pydocstyle
    "I",   # isort
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "ERA", # eradicate (commented-out code)
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "RUF", # Ruff-specific rules
]

ignore = [
    "B905",   # `zip()` without an explicit `strict=` parameter
    "ISC001", # Clash with ruff formatter
    "UP032",  # Use f-string instead of .format
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D102", "S101"]
